--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,9 +22,6 @@ jobs:
           go-version: 'stable'
           check-latest: true
 
-      - name: Get Repository Name
-        run: echo "PROJECT_NAME=$(basename $GITHUB_REPOSITORY)" >> $GITHUB_ENV
-
       - name: Cache Go modules
         uses: actions/cache@v4
         with:
@@ -35,14 +32,13 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-go-
 
-      - name: Build Binary
-        run: |
-          go build -o $PROJECT_NAME ./cmd/cli
-          tar -czvf $PROJECT_NAME_${{ github.ref_name }}.tar.gz $PROJECT_NAME
+      - name: Run Tests
+        run: go test ./... -v
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
-          files: ${{ env.PROJECT_NAME }}_${{ github.ref_name }}.tar.gz
+          files: |
+            README.md
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
